these_pasteur/exemples/EsteRML/test/good/t11.strl
signal s in
  emit s; present s then print "OK" else print "ERROR" end
end.