these_pasteur/exemples/EsteRML/test/bad/bad3.strl
signal s in
  present s then print "OK" else print "ERROR" end; emit s
end.